--- a/templates/laba2.html
+++ b/templates/laba2.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Лабораторная 2</title>
+    <title>Лабораторная {{ number_labolatory }}</title>
 </head>
 <body>
     <header>
-        Нгту, ФБ, Лабораторная 2
+        Нгту, ФБ, Лабораторная {{ number_labolatory }}
     </header>
     <main>
         основной контент
     </main>
     <footer>
-        &copy; {{ name }}, ФБИ-14, 3 курс, 2023
+        &copy; {{ name }}, ФБИ-14, {{ number_course }} курс, 2023
     </footer>
 </body>
 </html>
