--- a/templates/laba2.html
+++ b/templates/laba2.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Лабораторная {{ number_labolatory }}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css' ) }}">
 </head>
 <body>
     <header>
         Нгту, ФБ, Лабораторная {{ number_labolatory }}
     </header>
     <main>
-        основной контент
+        5 + 2 = {{ 5 + 2 }}<br>
+        8452 / 793 = {{ 8452 / 793 }}<br>
+        45**8 = {{ 45**8 }}<br>
     </main>
     <footer>
         &copy; {{ name }}, ФБИ-14, {{ number_course }} курс, 2023
