--- a/templates/laba2.html
+++ b/templates/laba2.html
@@ -14,6 +14,18 @@
         5 + 2 = {{ 5 + 2 }}<br>
         8452 / 793 = {{ 8452 / 793 }}<br>
         45**8 = {{ 45**8 }}<br>
+
+        <ul>
+            {% for f in fruits %}
+            <li>{{ f.name }}: {{f.price}}&#8381</li>
+            {% endfor %}
+        </ul>
+        <ul>
+            <div>Книги</div>
+            {% for i in books %}
+            <li> Название: {{ i.name }} Автор: {{i.author}}  Размер: {{i.size}}</li>
+            {% endfor %}
+        </ul>
     </main>
     <footer>
         &copy; 
