--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -9,5 +9,12 @@
         <li>
             <a href="/lab2/example">example</a>
         </li>
+        <li>
+            <a href="/lab2/cars">cars</a>
+        </li>
+        <li>
+            <a href="/index">menu</a>
+        </li>
+        
     </ol>
 {% endblock %}
