--- a/templates/form1.html
+++ b/templates/form1.html
@@ -9,8 +9,8 @@
     <h1>Привет, {{ user }}</h1>
     <h2>Добро пожаловать на наш сайт</h2>
     <div>Ваш возраст: {{ age }}</div>
-    <div>Ваш пол: {{ sex }}</div>
-    <div>
+    <div>Ваш пол: {{ 'мужской' if sex == 'male' else 'женский' }}</div>
+    <div>а
         <a href="/lab3/form1">Заново</a>
     </div>
 
