--- a/templates/form1.html
+++ b/templates/form1.html
@@ -20,19 +20,21 @@
     <form action="">
         <label for="">Ваше имя: </label>
         <div>
-            <input type="text" placeholder="Ваше имя" name="user">
+            <input type="text" placeholder="Ваше имя" name="user" value="{{ user or '' }}">
+            <span class="error">{{ errors.user }}</span>
         </div>
 
         <label for="">Ваш возраст </label>
         <div>
-            <input type="number" placeholder="Ваш возраст" name="age">
+            <input type="number" placeholder="Ваш возраст" name="age" value="{{ age or '' }}">
+            <span class="error">{{ errors.age }}</span>
         </div>
 
         <label for="">Ваш возраст: </label>
         <div>
             <select name="sex" id="">
-                <option value="male">Мужчина</option>
-                <option value="female">Женщина</option>
+                <option value="male" {{ sex == 'male' and 'selected' }}>Мужчина</option>
+                <option value="female" {{ sex == 'female' and 'selected' }}>Женщина</option>
             </select>
         </div>
 
