--- a/templates/lab3.html
+++ b/templates/lab3.html
@@ -8,6 +8,7 @@
     <div>Тема лабораторной - Формы. Список сделанных страниц: </div>
     <ol>
         <li><a href="/lab3/form1">Форма</a></li>
+        <li><a href="/lab3/order">Заказ</a></li>
     </ol>
 
 {% endblock %}
