--- a/templates/lab3.html
+++ b/templates/lab3.html
@@ -9,6 +9,7 @@
     <ol>
         <li><a href="/lab3/form1">Форма</a></li>
         <li><a href="/lab3/order">Заказ</a></li>
+        <li><a href="/lab3/ticket">Билет</a></li>
     </ol>
 
 {% endblock %}
