--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -8,6 +8,8 @@
     <div>Тема лабораторной - Формы (POST). Список сделанных страниц: </div>
     <ol>
         <li><a href="">...</a></li>
+        <li><a href="">...</a></li>
+        <li><a href="">...</a></li>
     </ol>
 
 {% endblock %}
