--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css' ) }}">
     <title>Завгородний Илья Артурович {% block lab %}{% endblock %}</title>
+    {% if request.cookies.get('color') %}
+    <style>
+
+        body{
+            color: {{ request.cookies.get('color') }};
+        }
+        
+    </style>
+    {% endif %}
+
 </head>
 <body>
     <header>
