--- a/templates/cookies.html
+++ b/templates/cookies.html
@@ -6,13 +6,29 @@
 
     <h1>Cookies</h1>
     <form action="" method="post">
-        <div>
-            <label for="color">Выберите цвет: </label>
-            <input type="color" name="color" id="color">
-        </div>
-        <div>
-            <button type="submit">OK</button>
-        </div>
+          <div>
+            <label for="color">Выберите цвет Текста:</label>
+            <input type="color" id="color" name="color" value="{{ color }}">
+          </div>
+          <div>
+            <label for="backgroundColor">Выберите цвет Фона:</label>
+            <input type="color" id="backgroundColor" name="backgroundColor" value="{{ backgroundColor }}">
+          </div>
+          <div>
+            <label for="fontSize">Выберите размер Текста:</label>
+            <input type="number" id="fontSize" name="fontSize" min="5" max="30" value="{{ fontSize }}">
+          </div>
+          <div>
+            <button type="submit">Ок</button>
+          </div>
+          <p>{{ error }}</p>
     </form>
+
+    <style>
+        body {
+            background-color: {{ backgroundColor }};
+            font-size: {{ fontSize }}px;
+        }
+    </style>
 
 {% endblock %}
