--- a/templates/lab5.html
+++ b/templates/lab5.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
 
-{% block lab %}Лабораторная работа 4{% endblock %}
+{% block lab %}Лабораторная 5{% endblock %}
 
-{% block main %}
-
-    <h1>Формы (POST)</h1>
-    <div>Тема лабораторной - Формы (POST). Список сделанных страниц: </div>
+{% block main%}
+    <h1>Flask и БДh1>
+    <div>Тема лабораторной - Flask и БД. Список сделанных страниц:</div>
     <ol>
-        <li><a href="">...</a></li>
+        <li><a href=""></a></li>
     </ol>
-
 {% endblock %}
