--- a/static/main.css
+++ b/static/main.css
@@ -91,3 +91,79 @@ li{
     position: relative;
     right: 300px;
 }
+
+.titles{
+    margin: 10px;
+    font-size: 18px;
+}
+.form_article{
+    margin-top: 15px;
+    font-size: 20px;
+}
+#text_article{
+    margin-top: 10px;
+}
+
+.button_user{
+  appearance: button;
+  backface-visibility: hidden;
+  background-color: #405cf5;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
+  font-size: 100%;
+  height: 44px;
+  line-height: 1.15;
+  margin: 12px 0 0;
+  outline: none;
+  overflow: hidden;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transform: translateZ(0);
+  transition: all .2s,box-shadow .08s ease-in;
+  user-select: none;
+  width: 300px;
+  touch-action: manipulation;
+}
+
+.button_user:disabled {
+  cursor: default;
+}
+
+.button_user:focus {
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
+}
+
+
+.input_label{
+    font-size: 24px;
+    color: black;
+    width: 100%;
+}
+
+.input_label input{
+    width: 200px;
+    height: 20px;
+}
+
+h1{
+    color: black;
+}
+
+.databaselab5 div{
+    margin-top: 15px;
+    font-size: 24px;
+    color: black;
+}
+.oform_zam{
+    margin-left: 50px;
+}
+.oform_zam h1{
+    font-size: 28px;
+}
