--- a/templates/articles.html
+++ b/templates/articles.html
@@ -26,7 +26,7 @@
         
 
         <div>статьи пользователя, {{ username }}</div>
-        <h1>Мои статьи</h1>
+        <h1>Статьи</h1>
         <ul>
             {% for article in articles %}
             <li>{{ article.title }} <a href="/lab5/articles/{{ article.id }}">/lab5/articles/{{ article.id }}</a></li>
