--- a/templates/lab5.html
+++ b/templates/lab5.html
@@ -24,6 +24,9 @@
             <form action="/lab5/logout">
                 <button class="button_user" type="submit">Выйти</button>
             </form>
+            <form action="/lab5/users">
+                <button class="button_user" type="submit">Юзеры</button>
+            </form>
         </ol>
     </div>
 {% endblock %}
