--- a/templates/login5.html
+++ b/templates/login5.html
@@ -21,7 +21,9 @@
         </div>
         <div>
             <button type="submit" class="button_user">Войти</button>
-            <button type="reset" class="button_user">Отмена</button>
         </div>
+    </form>
+    <form action="/lab5/">
+        <button class="button_user" type="submit">Назад</button>
     </form>
 {% endblock %}
