--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,11 @@
 {% block main%}
     <h1>Страница регистрации</h1>
     <form action="" method="post">
+        <div>
+            {% for error in errors %}
+                {{ error }}
+            {% endfor %}
+        </div>
         <div class="input_label">
             <input type="text" name="username" placeholder="username">
             <label for="username">Логин</label>
@@ -15,13 +20,10 @@
             <label for="password">Пароль</label>
         </div>
         <button type="submit" class="button_user">Зарегистрироваться</button>
-        <button type="reset" class="button_user">Отмена</button>
 
-        <div>
-            {% for error in errors %}
-                {{ error }}
-            {% endfor %}
-        </div>
+    </form>
+    <form action="/lab5/">
+        <button class="button_user" type="submit">Назад</button>
     </form>
 
 {% endblock %}
