--- a/templates/users.html
+++ b/templates/users.html
@@ -6,10 +6,7 @@
     <h1>Flask и БДh1>
     <div>Тема лабораторной - Flask и БД. Список сделанных страниц:</div>
     <div>
-        Пользователи:
+        Пользователи: {{ user_list }}
     </div>
-    <div>Пользователь 1: {{ user0 }}</div>
-    <div>Пользователь 2: {{ user1 }}</div>
-    <div>Пользователь 3: {{ user2 }}</div>
-    <div>Пользователь 4: {{ user3 }}</div>
+
 {% endblock %}
