--- a/templates/lab8/index.html
+++ b/templates/lab8/index.html
@@ -2,7 +2,61 @@
 
 {% block lab %}Лабораторная 8{% endblock %}
 {% block script %}
-<script src="{{ url_for ('static', filename = 'lab7/drink.js') }}"></script>
+<script src="{{ url_for ('static', filename = 'lab8/lab8.js') }}"></script>
+<style>
+    .modal{
+        display: none;
+        z-index: 100;
+        width: 400px;
+        left: 50%;
+        margin-left: -200px;
+        position: absolute;
+        padding: 20px;
+    }
+</style>
 {% endblock %}
 {% block main%}
+<h1>Список курсов</h1>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Название</th>
+                <th>Количество видеороликов</th>
+                <th>Цена</th>
+                <th>Действие</th>
+                <th>Дата создания</th>
+            </tr>
+        </thead>
+        <tbody id="course-list"></tbody>
+    </table>
+
+    <script>
+        fillCourseList();
+    </script>
+
+    <div>
+        <button onclick="addCourse()">Добавить курс</button>
+    </div>
+
+    <div class="modal">
+        <input type="hidden" id="num">
+        <label>
+            Название курса:
+            <input type="text" id="name"> 
+        </label><br>
+
+        <label>
+            Количество видеороликов:
+            <input type="number" id="videos" min="0">
+        </label><br>
+
+        <label>
+            Цена:
+            <input type="number" id="price" min="0">
+        </label><br>
+
+        <button onclick="sendCourse()">ОК</button>
+        <button onclick="cancel()">Отмена</button>
+    </div>
 {% endblock %}
